[package]
name = "speech-bubble-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
